fix overlapping live-values.

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -594,6 +594,10 @@ body #grid * {
     .quote {
       display: inline-block;
     }
+    position: relative;
+    .computed-value-value {
+      bottom: 0px;
+    }
   }
 
   .quote {
@@ -1079,7 +1083,6 @@ body #grid * {
     outline: 0.4px red dotted;
   }
   .default;
-  bottom: 30px;
   max-width: 100%;
   outline: 0.4px @green dotted;
   position: absolute;
